--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "crypto-js": "^4.1.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ws": "^8.2.2"
   }
 }
